Fixed naming conventions
