# Domains/Weather/Hosts/RestApi/Application/Controllers/V1_0/WeatherForecast.cs
@@ -31,7 +31,7 @@
         {
             RequestResult requestResult = await Orchestrator.SendQuery(new GetWeatherForecastsQuery());
 
-            if (!requestResult.Success)
+            if (!requestResult.Succeeded)
                 return BadRequest(requestResult.Messages);
 
             return Ok(requestResult.Payload());
